--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
         *::after,
         *::before {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
         body {
             font-family: 'Roboto', sans-serif;
